<resources>
    <string name="app_name">DAYO</string>
    <string name="app_logo">Dayo Logo</string>
    <string name="inquiry_email">dayo.jkhj@gmail.com</string>
    <string name="home">홈</string>
    <string name="feed">피드</string>
    <string name="write">글쓰기</string>
    <string name="notification">알림</string>
    <string name="my_page">MY</string>
    <string name="tag">태그</string>
    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="confirm">확인</string>
    <string name="complete">완료</string>
    <string name="submit">제출</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="select_all">모두 선택</string>
    <string name="delete">삭제</string>
    <string name="move">이동</string>
    <string name="delete_all">전체삭제</string>
    <string name="modify">수정</string>
    <string name="close">닫기</string>
    <string name="sign_in">로그인</string>
    <string name="login">로그인</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="add">추가</string>
    <string name="category">카테고리</string>
    <string name="app_version">버전 정보</string>
    <string name="app_version_force_update">업데이트가 필요합니다</string>
    <string name="back_sign">뒤로가기</string>
    <string name="loading_default_message">잠시만 기다려 주세요</string>
    <string name="network_error_dialog_default_message">인터넷 연결 상태를 확인해주세요</string>
    <string name="close_sign">닫기</string>
    <string name="re_try">재시도</string>
    <string name="time_format">%d%s</string>
    <string name="time_now">방금 전</string>
    <string name="time_minute_ago">분 전</string>
    <string name="time_hour_ago">시간 전</string>
    <string name="time_day_ago">일 전</string>
    <string name="time_month_ago">달 전</string>
    <string name="time_year_ago">년 전</string>
    <string name="permission_fail_message_camera">카메라 권한을 허용하지 않으면 사진을 등록할 수 없습니다</string>
    <string name="permission_fail_final_message_camera">카메라를 통해 사진을 등록하려면 설정에서 카메라 권한을 허용으로 변경해주세요</string>
    <string name="permission_fail_message_gallery">파일 권한을 허용하지 않으면 사진을 등록할 수 없습니다</string>
    <string name="permission_fail_final_message_gallery">갤러리를 통해 사진을 등록하려면 설정에서 파일 권한을 허용으로 변경해주세요</string>
    <string name="permission_fail_message_notification">알림 권한을 허용하지 않으면 정상적 사용이 불가능할 수 있습니다</string>
    <string name="permission_fail_final_message_notification">설정에서 알림을 허용으로 변경해주세요</string>
    <string name="permission_fail_second">DENIED</string>
    <string name="permission_fail_final">EXPLAINED</string>
    <string name="main_finish_toast">한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="onboarding_first_message">인기가 많은 다꾸들을 구경할 수 있어요</string>
    <string name="onboarding_second_message">내 취향의 다꾸러들을 팔로우하고 모아볼 수 있어요</string>
    <string name="onboarding_third_message">내 다꾸들을 폴더를 만들어 분류할 수 있어요</string>
    <string name="onboarding_fourth_message_1">내가 열심히 꾸민 다이어리,</string>
    <string name="onboarding_fourth_message_2">에 공유하러 가볼까요?</string>
    <string name="sign_in_kakao_fail_message">카카오 로그인에 실패했어요</string>
    <string name="sign_in_email_title">로그인</string>
    <string name="sign_in_email_input_email_title">이메일</string>
    <string name="sign_in_email_input_email_placeholder">이메일을 입력해주세요</string>
    <string name="sign_in_email_input_password_title">패스워드</string>
    <string name="sign_in_email_input_password_placeholder">비밀번호를 입력해주세요</string>
    <string name="sign_in_email_forget_password">비밀번호 찾기</string>
    <string name="sign_in_email_fail_message">이메일 또는 비밀번호를 잘못 입력했어요</string>
    <string name="sign_up_email">아직 계정이 없으신가요?</string>
    <string name="signup_guide_message_email">아직 계정이 없으신가요? <u>회원가입</u>하기</string>
    <string name="login_select_method_kakao">카카오톡으로 시작하기</string>
    <string name="login_select_method_email">이메일로 시작하기</string>
    <string name="hint_login_email_address">이메일을 입력해주세요.</string>
    <string name="hint_login_email_password">비밀번호를 입력해주세요.</string>
    <string name="login_email_alert_message_fail">이메일 주소 또는 비밀번호를 잘못 입력했어요.</string>
    <string name="login_email_forget"><u>비밀번호</u>를 잊어버렸어요</string>
    <string name="login_email_signup">아직 계정이 없으신가요? <u>회원가입</u>하기</string>
    <string name="login_policy_guide_message">가입 시 DAYO의 이용약관 및 개인정보 취급방침에 동의하게 됩니다.</string>
    <string name="rules_privacy_policy_title">개인정보 취급방침</string>
    <string name="rules_terms_and_conditions">이용약관</string>
    <string name="DayoPick">DAYO PICK</string>
    <string name="New">New</string>
    <string name="home_dayopick_description">지금 인기있는 게시글이에요!</string>
    <string name="home_dayopick_empty_title">인기있는 다꾸가 아직 없어요</string>
    <string name="home_dayopick_empty_detail">다꾸들을 구경하고 반응을 남겨보세요</string>
    <string name="home_dayopick_empty_action">구경하러 가기</string>
    <string name="home_new_description">실시간으로 올라온 게시글이에요!</string>
    <string name="home_new_empty_title">새로운 다꾸가 아직 없어요</string>
    <string name="home_new_empty_detail">여러분의 다꾸를 공유해보세요</string>
    <string name="home_new_empty_action">공유하러 가기</string>
    <string name="filter">필터</string>
    <string name="all">전체</string>
    <string name="scheduler">스케줄러</string>
    <string name="studyplanner">스터디 플래너</string>
    <string name="pocketbook">포켓북</string>
    <string name="sixHoleDiary">6공 다이어리</string>
    <string name="digital">모바일 다이어리</string>
    <string name="etc">기타</string>
    <string name="all_eng">ALL</string>
    <string name="scheduler_eng">SCHEDULER</string>
    <string name="studyplanner_eng">STUDY_PLANNER</string>
    <string name="pocketbook_eng">POCKET_BOOK</string>
    <string name="sixHoleDiary_eng">SIX_DIARY</string>
    <string name="digital_eng">GOOD_NOTE</string>
    <string name="etc_eng">ETC</string>
    <string name="privacy_all">전체공개</string>
    <string name="privacy_following">팔로잉</string>
    <string name="privacy_private">나만보기</string>
    <string name="privacy_all_eng">ALL</string>
    <string name="privacy_following_eng">FOLLOWING</string>
    <string name="privacy_private_eng">ONLY_ME</string>
    <string name="feed_empty_title">아직 피드에 게시물이 없어요.</string>
    <string name="feed_empty_description">팔로우하고 내 취향의 다꾸들을 모아보세요</string>
    <string name="feed_empty_button">팔로우하러 가기</string>
    <string name="write_post_image_edit">이미지 편집</string>
    <string name="write_post_image_crop_title">이미지 편집</string>
    <string name="write_post_title">게시글 작성</string>
    <string name="write_post_edit_title">게시글 수정</string>
    <string name="write_post_upload">올리기</string>
    <string name="write_post_detail_placeholder">꾸민 다이어리에 대해 설명해주세요.</string>
    <string name="write_post_detail_count_limit"> / %d</string>
    <string name="write_post_select_category_title">카테고리 선택</string>
    <string name="write_post_select_tag_title">태그</string>
    <string name="write_post_select_tag_subheading">태그 입력</string>
    <string name="write_post_select_tag_contents">#%s</string>
    <string name="write_post_select_folder_title">폴더</string>
    <string name="write_post_select_folder_subheading">폴더 선택</string>
    <string name="hint_write_description">내용을 작성해주세요.</string>
    <string name="write_post_description_count_limit"> / 최대 200자</string>
    <string name="upload">올리기</string>
    <string name="write_post_tag_add">태그 추가</string>
    <string name="hint_write_post_tag_add"># 키워드를 입력해주세요.</string>
    <string name="write_option_title_folder">폴더 설정</string>
    <string name="write_option_description_folder">폴더를 선택해 주세요.</string>
    <string name="write_option_title_private">공개 설정</string>
    <string name="write_option_title_tag">태그 추가</string>
    <string name="write_option_description_tag">기록에 관한 키워드를 추가해보세요.</string>
    <string name="write_post_tag_title">태그</string>
    <string name="write_post_tag_subheading">어떤 주제의 다꾸인가요?</string>
    <string name="write_post_tag_input_placeholder"># 태그를 입력하세요</string>
    <string name="write_post_tag_count_limit"> / %d</string>
    <string name="write_post_tag_alert_message_tag_size_fail_max">태그는 %d개까지 등록 가능해요.</string>
    <string name="write_post_tag_alert_message_tag_length_fail_max">태그는 %d자 까지만 입력할 수 있어요!</string>
    <string name="write_post_folder_title">폴더 선택</string>
    <string name="write_post_folder_navigate_create_folder">새로운 폴더 추가</string>
    <string name="write_post_folder_detail_current_count">%d개</string>
    <string name="write_post_folder_new_title">폴더 추가</string>
    <string name="write_post_folder_new_folder_name_title">폴더 이름</string>
    <string name="write_post_folder_new_folder_name_placeholder">12자 이내로 입력해주세요</string>
    <string name="write_post_folder_new_folder_description_title">폴더 소개</string>
    <string name="write_post_folder_new_folder_description_placeholder">20자 이내로 입력해주세요</string>
    <string name="write_post_folder_new_folder_privacy_title">비공개 폴더</string>
    <string name="write_post_upload_alert_message_empty_content">내용을 입력해 주세요.</string>
    <string name="write_post_upload_alert_message_empty_image">사진을 추가해 주세요.</string>
    <string name="write_post_upload_alert_message_empty_category">카테고리를 선택해 주세요.</string>
    <string name="write_post_upload_alert_message_empty_folder">폴더를 선택해 주세요</string>
    <string name="write_post_upload_alert_message_edittext_length_fail_max">내용은 200자까지 작성할 수 있어요.</string>
    <string name="write_post_upload_alert_message_image_fail_max">사진은 5장까지만 선택 가능합니다.</string>
    <string name="write_post_upload_alert_message_image_fail_file_extension">jpg, jpeg, png, webp 형식의 이미지 파일만 업로드 가능합니다.</string>
    <string name="write_post_upload_alert_message_image_fail_null">사진 가져오기에 실패했습니다. 다시 선택해주세요</string>
    <string name="write_post_upload_alert_message_loading">게시글을 올리고 있어요! 잠시만 기다려주세요.</string>
    <string name="write_post_upload_alert_message_fail">게시글을 업로드 할 수 없어요. 다시 시도해주세요.</string>
    <string name="write_post_upload_state_loading">게시글을 올리고 있어요! 잠시만 기다려주세요.</string>
    <string name="write_post_upload_state_fail">게시글을 업로드할 수 없어요. 다시 시도해주세요.</string>
    <string name="write_post_edit_state_fail">게시글을 불러올 수 없습니다. 다시 시도해주세요.</string>
    <string name="hint_post_comment_write_description">댓글을 남겨주세요</string>
    <string name="post_comment_write_upload">게시</string>
    <string name="post_option_block_user">사용자 차단</string>
    <string name="post_block_message">사용자를 차단할까요?</string>
    <string name="post_block_explanation_message">사용자를 차단하면\n 서로 게시물을 볼 수 없어요.</string>
    <string name="post_block_success_message">사용자가 차단되었어요.</string>
    <string name="post_option_report_user">사용자 신고</string>
    <string name="post_option_report_post">게시물 신고</string>
    <string name="post_option_hide">이 게시물 숨기기</string>
    <string name="post_like_count_message_1">이 글을</string>
    <string name="post_like_count_message_2">명이 좋아해요</string>
    <string name="post_comment_count_message">개의 댓글</string>
    <string name="post_contents_more">더보기</string>
    <string name="post_comment_empty">아직 댓글이 없어요</string>
    <string name="post_comment_empty_description">이 게시글에 대해 댓글을 남겨주세요</string>
    <string name="post_comment_delete_alert_message">댓글을 삭제할까요?</string>
    <string name="post_comment_delete_alert_message_success">댓글이 삭제되었습니다.</string>
    <string name="post_folder_add_title">폴더 추가</string>
    <string name="folder_setting_add_set_title">폴더 이름</string>
    <string name="folder_setting_add_set_subheading">폴더 소개</string>
    <string name="folder_setting_add_set_private">공개설정</string>
    <string name="hint_folder_setting_add_set_title">15자 이내로 입력해주세요.</string>
    <string name="hint_folder_setting_add_set_subheading">20자 이내로 입력해주세요.</string>
    <string name="post_folder_add_set_private_all">전체공개</string>
    <string name="post_folder_add_set_private_only_me">나만보기</string>
    <string name="get_certificate_code">인증번호 받기</string>
    <string name="email_address_example">email@example.com</string>
    <string name="find_account_password_title">비밀번호 찾기</string>
    <string name="find_account_password_check_email_description">가입할 때 사용한 이메일을 입력해주세요.</string>
</resources>