<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="daily.dayo.presentation.fragment.mypage.folder.FolderSettingAddFragment"
    android:background="@color/white_FFFFFF">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_folder_setting_add_action_bar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:elevation="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageButton
            android:id="@+id/btn_folder_setting_add_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back_sign"
            tools:ignore="ContentDescription"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="18dp"/>
        <TextView
            android:id="@+id/tv_folder_setting_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_folder_add_title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/gray_1_313131"
            app:layout_constraintTop_toTopOf="@id/btn_folder_setting_add_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_folder_setting_add_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_folder_setting_add_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:textSize="16dp"
            android:enabled="false"
            android:textColor="@color/gray_4_C5CAD2"
            android:gravity="center_vertical"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="@id/btn_folder_setting_add_back"
            app:layout_constraintBottom_toBottomOf="@id/btn_folder_setting_add_back"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingEnd="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_folder_setting_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_folder_thumbnail_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_folder_setting_add_action_bar"
        app:shapeAppearanceOverlay="@style/roundedImageViewRoundedCorner" />

    <TextView
        android:id="@+id/tv_folder_setting_add_set_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="커버 이미지를 등록해주세요"
        android:textSize="13dp"
        android:textColor="@color/gray_4_C5CAD2"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@id/iv_folder_setting_thumbnail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_folder_setting_add_set_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_folder_setting_add_set_thumbnail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="18dp">
        <TextView
            android:id="@+id/tv_folder_setting_add_set_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder_setting_add_set_title"
            android:textSize="15dp"
            android:textColor="@color/gray_1_313131"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_folder_setting_add_set_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_folder_setting_add_set_title"
            android:backgroundTint="@drawable/selector_edittext_background_stroke"
            android:singleLine="true"
            android:textColor="@color/gray_1_313131"
            android:textColorHint="@color/gray_4_C5CAD2"
            android:textSize="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_folder_setting_add_set_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_folder_setting_add_set_subheading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_folder_setting_add_set_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="18dp">
        <TextView
            android:id="@+id/tv_folder_setting_add_set_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder_setting_add_set_subheading"
            android:textSize="15dp"
            android:textColor="@color/gray_1_313131"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <EditText
            android:id="@+id/et_folder_setting_add_set_subheading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_folder_setting_add_set_subheading"
            android:singleLine="true"
            android:textSize="16dp"
            android:maxLength="20"
            android:backgroundTint="@drawable/selector_edittext_background_stroke"
            android:textColor="@color/gray_1_313131"
            android:textColorHint="@color/gray_4_C5CAD2"
            app:layout_constraintTop_toBottomOf="@id/tv_folder_setting_add_set_subheading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_folder_setting_add_set_private"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_folder_setting_add_set_subheading"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="18dp">
        <TextView
            android:id="@+id/tv_folder_setting_add_set_private_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder_setting_add_set_private"
            android:textSize="15dp"
            android:textColor="@color/gray_1_313131"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <RadioGroup
            android:id="@+id/radiogroup_folder_setting_add_set_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_folder_setting_add_set_private_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp">
            <RadioButton
                android:id="@+id/radiobutton_folder_setting_add_set_private_all"
                android:layout_width="77dp"
                android:layout_height="27dp"
                android:text="@string/post_folder_add_set_private_all"
                android:checked="true"
                android:textSize="13dp"
                android:textColor="@drawable/selector_button_write_option_private_text"
                android:textAlignment="center"
                android:background="@drawable/selector_button_write_option_private"
                android:button="@null"
                android:layout_marginRight="7dp"/>
            <RadioButton
                android:id="@+id/radiobutton_folder_setting_add_set_private_only_me"
                android:layout_width="77dp"
                android:layout_height="27dp"
                android:text="@string/post_folder_add_set_private_only_me"
                android:textSize="13dp"
                android:textColor="@drawable/selector_button_write_option_private_text"
                android:textAlignment="center"
                android:background="@drawable/selector_button_write_option_private"
                android:button="@null"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>