<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_FFFFFF"
    tools:context="daily.dayo.presentation.fragment.account.findAccount.FindAccountPasswordCheckEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_find_account_password_check_email_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="24dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="43dp">

        <ImageButton
            android:id="@+id/btn_find_account_password_check_email_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingHorizontal="18dp"
            android:src="@drawable/ic_back_sign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/layout_find_account_password_check_email_next"
        app:layout_constraintTop_toBottomOf="@id/layout_find_account_password_check_email_action_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_find_account_password_check_email_contents"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_find_account_password_check_email_action_bar">

            <TextView
                android:id="@+id/tv_find_account_password_check_email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/find_account_password_title"
                android:textColor="@color/gray_1_313131"
                android:textSize="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_find_account_password_check_email_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/find_account_password_check_email_description"
                android:textColor="@color/gray_3_9FA5AE"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_find_account_password_check_email_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_find_account_password_check_email_user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="61dp"
                android:hint="@string/email_address_example"
                android:textColorHint="@color/gray_4_C5CAD2"
                app:boxBackgroundColor="@android:color/transparent"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/gray_5_E8EAEE"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="custom"
                app:endIconTint="@android:color/transparent"

                app:endIconTintMode="src_over"
                app:errorIconDrawable="@drawable/ic_check_x_sign"
                app:errorIconTint="@android:color/transparent"

                app:errorIconTintMode="src_over"
                app:errorTextColor="@color/red_FF4545"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true"

                app:hintTextColor="@color/gray_3_9FA5AE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_find_account_password_check_email_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_find_account_password_check_email_user_input"
                    style="@style/WriteEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background_remove_padding"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:paddingStart="0dp"
                    android:paddingTop="14dp"
                    android:singleLine="true"
                    android:textColor="@color/gray_1_313131"
                    android:textSize="17dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_find_account_password_check_email_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white_FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_find_account_password_check_email_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/button_default_signup_next_button_inactive"
            android:enabled="false"
            android:stateListAnimator="@null"
            android:text="@string/get_certificate_code"
            android:textAlignment="center"
            android:textColor="@color/white_FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>